--- a/DogInformation/Views/Shared/_Layout.cshtml
+++ b/DogInformation/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Dog List", "Index", "Dogs")</li>
+                    <li>@Html.ActionLink("Dog Breed", "Index", "DogBreeds")</li>
                 </ul>
             </div>
         </div>
