--- a/DogInformation/Views/Dogs/Edit.cshtml
+++ b/DogInformation/Views/Dogs/Edit.cshtml
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DogBreedID, "DogBreedID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DogBreedID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("DogBreedID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DogBreedID, "", new { @class = "text-danger" })
